--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,13 @@ services:
         generateValue: true
       - key: PYTHON_VERSION
         value: "3.11"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: office-tracker-db
+          property: connectionString
+
+databases:
+  - name: office-tracker-db
+    databaseName: office_tracker
+    user: office_tracker_user
 
