--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
     name: office-tracker
-    env: python
+    runtime: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
     envVars:
@@ -18,4 +19,4 @@ databases:
   - name: office-tracker-db
     databaseName: office_tracker
     user: office_tracker_user
-
+    plan: free
