Migrate to Supabase for permanent free PostgreSQL hosting
- Remove Render's temporary PostgreSQL database (90-day expiration)
- Configure app to use Supabase PostgreSQL (free forever)
- DATABASE_URL will be set manually in Render dashboard for security
- Add deployment guide with Supabase setup instructions

--- a/render.yaml
+++ b/render.yaml
@@ -11,12 +11,4 @@ services:
       - key: PYTHON_VERSION
         value: "3.11"
       - key: DATABASE_URL
-        fromDatabase:
-          name: office-tracker-db
-          property: connectionString
-
-databases:
-  - name: office-tracker-db
-    databaseName: office_tracker
-    user: office_tracker_user
-    plan: free
+        sync: false  # Will be set manually in Render dashboard to Supabase connection string
